--- a/src/MimeDetector/MimeDetector.csproj
+++ b/src/MimeDetector/MimeDetector.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Title>The mime detector for files.</Title>
+    <Title>MimeDetector: the mime detector for files.</Title>
     <Description>The mime detector for files (e.g. png, gif, jpeg, rtf, pdf, docx, zip, rar,...).</Description>
     <Summary>The mime detector for files helps to prevent attacker trying to upload or attack damage files to the web server.</Summary>
-    <Version>0.1.0</Version>
-    <VersionPrefix>0.1.0</VersionPrefix>
+    <Version>0.0.1</Version>
+    <VersionPrefix>0.0.1</VersionPrefix>
     <AssemblyVersion>0.0.1.0</AssemblyVersion>
     <FileVersion>0.0.1.0</FileVersion>
     <Authors>Thang Chung</Authors>
@@ -13,14 +13,15 @@
     <OutputType>Library</OutputType>
     <WarningsAsErrors>true</WarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageTags>mine-type;mine;mine-detector;owasp;security;web-security;</PackageTags>
-    <PackageProjectUrl>https://github.com/thangchung/Mime-Detective</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/thangchung/Mime-Detective/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageTags>mine-type mine mine-detector owasp security web-security</PackageTags>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/thangchung/Mime-Detective.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/thangchung/Mime-Detector</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/thangchung/Mime-Detector/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/thangchung/Mime-Detector.git</RepositoryUrl>
     <NeutralLanguage>en-US</NeutralLanguage>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Copyright>Copyright (c) 2018 - Thang Chung</Copyright>
+    <RootNamespace>MimeDetector</RootNamespace>
+    <Copyright>Copyright (c) Thang Chung - 2018</Copyright>
   </PropertyGroup>
 
 </Project>
